--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -10,6 +10,10 @@
   margin: 10px;
 }
 
+/* .break2{
+  width: 100%;
+} */
+
 .heading {
   justify-content: flex-start;
 }
@@ -64,10 +68,12 @@
 
 .carousel1 {
   flex: 2;
+
 }
 
 .carousel2 {
   flex: 2;
+
 }
 
 .left-button {
