--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -24,7 +24,7 @@ nav {
   left: 0;
   right: 0;
   padding-top: 30px;
-
+  z-index: 10;
   box-shadow: 0 0 25px 0 black;
 }
 
@@ -54,18 +54,18 @@ nav li:hover {
 }
 
 /* .header * {
-      display: inline;
-    }
-    
-    .header li {
-      font-size: 18px;
-      font-weight: 500;
-      color: white;
-      margin: 35px;
-      cursor: pointer;
-    }
-    
-    .header li a {
-      color: white;
-      text-decoration: none;
-    } */
+    display: inline;
+  }
+  
+  .header li {
+    font-size: 18px;
+    font-weight: 500;
+    color: white;
+    margin: 35px;
+    cursor: pointer;
+  }
+  
+  .header li a {
+    color: white;
+    text-decoration: none;
+  } */
