--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -16,7 +16,7 @@ nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  min-height: 10vh;
+  min-height: 10px;
   color: white;
   background: #4285f4;
   position: fixed;
